<?xml version="1.0"?>
<package format="3">
  <name>ellipselio</name>
  <version>1.0.0</version>

  <description>
  EllipseLIO is an Adaptive LiDAR Inertial Odometry Approach with an Ellipsoid Representation.
  </description>

  <maintainer email="rborder.robots@gmail.com">Rowan Border</maintainer>

  <license>MIT</license>

  <author email="rborder.robots@gmail.com">Rowan Border</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>common_interfaces</depend>
  <depend>tf2</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>image_transport</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
